test/src/e2e_vm_tests/test_programs/should_pass/optimisations/leaf_fns/src/main.sw
script;

#[inline(never)]
fn leaf_fn_1() {

}

fn main() {
    leaf_fn_1();
}
