test/src/e2e_vm_tests/test_programs/should_fail/attributes_invalid_args/src/trace_attr.sw
library;

struct S { }

impl S {
    #[trace(always)]
    fn ok_1() {
        panic "Panics for tracing purposes.";
    }
    
    #[trace(never)]
    fn ok_1() {
        panic "Panics for tracing purposes.";
    }

    #[trace(alwys)]
    #[trace(unknown_arg)]
    fn not_ok() {
        panic "Panics for tracing purposes.";
    }
}